--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
 @import '~antd/dist/antd.dark.css';
 
+.info {
+    color: #0fe;
+}
+
+.info::before {
+    content: 'Note: ';
+}
+
+.interactive {
+    color: #f66;
+}
+
+.interactive:before {
+    content: 'Note: ';
+}
+
 body {
     background-color: #464646 !important;
     color: #fff;
@@ -25,7 +41,7 @@ tr td:nth-child(4) {
     color: #00da00;
 }
 tr td:nth-child(5) {
-    color: #ff0000;
+    color: #f66;
 }
 
 h1,
